# TTSBard

./: .claudeignore  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTINUATION.md  DEAD_CODE_ANALYSIS.md  PLAN.md  PROBLEMS.md  README.md  cliff.toml  index.html  package-lock.json  package.json  search_bing.html  search_google.html  vite.config.ts  yt_data.json
.claude/rules/: code-review-changes.md  code-review.md  context.md  planning.md
.claude/skills/: build-validation.md  code-review-changes.md  css-development.md  fix-rust-warnings.md  rust-development.md  version-management.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml
docs/: .context-rules.md  INDEX.md  KEY_DECISIONS.md  QUICK_START.md  README.md  TASKS.md  TEST_REPORT.md  architecture.md  audio-effects.md  cheatsheet.md  error-handling-implementation.md  error-handling-preview.md  icon-guide.md  note-last-claude.txt  preprocessor-testing.md  project-overview.md  rust-modules.md  sse-integration.md  test-report-multiple-tts-providers.md  vue-components.md  webview.md
docs/TTS-Voice-Wizard/: pitch-speed-volume.md
docs/bugs/: 01-playback-window-empty-transparent-bottom.md  02-spellcheck-online-source-calls-missing-command.md  03-editor-contextmenu-windows-items-not-app.md  04-audio-effects-speed-truncates-phrase-tail.md  05-telegram-2fa-login-required.md  06-main-window-tray-editor-focus.md
docs/decisions/: 001-windows-platform.md  002-tauri-shell.md  003-commands-and-events.md  004-service-owned-state.md  005-tts-provider-registry.md  006-pcm-audio-pipeline.md  007-text-pipeline-and-ai.md  008-json-persistence.md  009-windows-and-hotkeys.md  010-webview-sse.md  011-integration-lifecycle.md  012-css-tokens.md  013-network-configuration.md  014-errors-and-validation.md  015-hardcoded-f6-mode.md  016-split-playback-paths.md  017-gpl-3-license.md  README.md
docs/deepseek/: WORKFLOW.md
docs/dev/: debug-piper-onnx-runtime.md
docs/development/: README.md  ai-workflow.md  architecture.md  github-actions-build.md  windows-debug-crt.md
docs/ideas/: webview-complete.md  webview-progress.md  webview-source.md
docs/integrations/: README.md  sse.md  webview.md
docs/plans/: 02-2025-03-01-floating-window-settings.md  03-2025-03-01-floating-window-clickthrough.md  04-2025-03-01-floating-window-interception-toggle.md  05-2025-03-03-soundpanel-implementation.md  09-2025-03-05-special-characters-intercept.md  116-2026-07-11-atomic-history-and-tabs-saves.md  117-2026-07-11-appstate-decomposition-and-commands-refactoring.md  118-2026-07-11-webview-router-security-tests.md  119-2026-07-11-xss-and-concurrent-write-tests.md  12-2025-03-05-telegram-auto-connect.md  120-2026-07-11-frontend-composables-decomposition.md  14-2025-03-05-telegram-shared-state.md  15-2025-03-05-fix-tts-interception-mode.md  17-2025-03-05-f6-hotkey-interception-mode.md  18-2025-03-06-hotkey-mutual-exclusion.md  2025-03-01-tts-app-implementation.md  2025-03-04-multiple-tts-providers-design.md  2025-03-04-multiple-tts-providers.md  2025-03-05-change-main-window-hotkey.md  2025-03-05-fix-tts-provider-switching.md  2025-03-05-telegram-auth-design.md  2025-03-05-telegram-auth-implementation.md  2025-03-05-text-preprocessor.md  2025-03-06-exclude-from-recording.md  2025-03-06-readme-update.md  2025-03-06-twitch-chat-design.md  21-2025-03-06-webview-source-design.md  22-2025-03-06-webview-source.md  24-2025-03-06-twitch-chat.md  25-2026-03-07-code-review-fixes.md  26-2026-03-07-config-reorganization-progress.md  26-2026-03-07-config-reorganization.md  27-2026-03-07-code-review-fixes.md  28-2026-03-07-ttsvoicewizard-local-refactor.md  (+58 more)
scripts/: build-debug.bat  build-release.bat  build.ps1  check-docs.ps1  set-version.cjs  setup-ssh.sh  sync-pull-tar.sh  sync-pull.sh  sync-push-tar.sh  sync-push.sh
src/: App.vue  style.css  types.ts  version.ts
src-floating/: App.vue  index.html
src-playback/: PlaybackControlApp.vue  index.html  main.ts
src-soundpanel/: SoundPanelApp.vue  index.html  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/tract-core/: Cargo.toml
src-tauri/patches/tract-core/src/: lib.rs
src-tauri/patches/tract-core/src/model/: graph.rs  graph_builder.rs  wirer.rs
src-tauri/patches/tract-core/src/ops/einsum/: rewrite.rs
src-tauri/src/: editor.rs  error.rs  event_loop.rs  events.rs  floating.rs  history.rs  hook.rs  hotkeys.rs  lib.rs  main.rs  playback.rs  playback_window.rs  rate_limiter.rs  secret_log.rs  settings.rs  setup.rs  soundpanel_window.rs  spellcheck.rs  state.rs  tabs.rs  thread_manager.rs  window.rs
src-tauri/src/ai/: common.rs  custom.rs  deepseek.rs  mod.rs  openai.rs  zai.rs
src-tauri/src/assets/: mod.rs
src-tauri/src/audio/: boundary.rs  device.rs  dsp.rs  effects.rs  mod.rs  player.rs  settings.rs
src-tauri/src/commands/: ai.rs  history.rs  logging.rs  mod.rs  playback.rs  playback_window.rs  preprocessor.rs  proxy.rs  spellcheck.rs  tabs.rs  telegram.rs  tts_pipeline.rs  twitch.rs  vtube_studio.rs  webview.rs  window.rs
src-tauri/src/config/: constants.rs  dto.rs  hotkeys.rs  mod.rs  persistence.rs  settings.rs  validation.rs  windows.rs
src-tauri/src/preprocessor/: mod.rs  numbers.rs  prefix.rs  replacer.rs
src-tauri/src/servers/: mod.rs  twitch.rs  webview.rs
src-tauri/src/signalsmith/: bridge.cpp  mod.rs  wrapper.rs
src-tauri/src/soundpanel/: audio.rs  bindings.rs  hook.rs  intercept.rs  mod.rs  state.rs  storage.rs
src-tauri/src/telegram/: bot.rs  client.rs  mod.rs  types.rs
src-tauri/src/tts/: engine.rs  fish.rs  local.rs  local_http_server.rs  mod.rs  openai.rs  proxy_utils.rs  registry.rs  silero.rs
src-tauri/src/tts/piper/: mod.rs  runtime.rs  scanner.rs  smoke.rs
src-tauri/src/twitch/: client.rs  mod.rs  service.rs
src-tauri/src/vtube_studio/: messages.rs  mod.rs  service.rs
src-tauri/src/webview/: mod.rs  security.rs  server.rs  service.rs  templates.rs  upnp.rs  websocket.rs
src-tauri/tests/: hook_filter_test.rs
(+499 files in other folders)
