[package]
name = "ttsbard"
version = "0.3.0-dev"
description = "Fast text-to-speech for communication and streaming — for people with speech limitations and streamers"
authors = ["you"]
edition = "2021"

[lints.rust]
dead_code = "warn"
unused = "warn"

[lints.clippy]
todo = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ttsbard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = { version = "1", features = ["parallel"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
axum = { version = "0.8" }
reqwest = { version = "0.12", features = ["json", "socks", "native-tls"] }
async-openai = { version = "0.33", features = ["chat-completion"] }
backoff = "0.4"
base64 = "0.22"
hex = "0.4"
urlencoding = "2.1"
dirs = "5"
rodio = { version = "0.19", features = ["symphonia-mp3", "symphonia-wav"] }
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "wav"] }
lewton = "0.10"
# DeepFilterNet real-time speech enhancement (native Rust inference via tract).
# NOTE: the package is `deep_filter` (in the libDF subdirectory) but its library
# target is named `df`, so it is imported in code as `df::tract::*`.
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet", features = ["tract", "default-model"] }
# ndarray must match the version used by deep_filter (^0.15) to share array types.
ndarray = "0.15"
# DeepFilterNet 0.5.7-pre uses APIs from tract 0.21.4; newer 0.21.x releases
# changed ndarray and graph APIs without a compatible DeepFilterNet release.
tract-core = "=0.21.4"
tract-hir = "=0.21.4"
tract-onnx = "=0.21.4"
tract-pulse = "=0.21.4"
image = "0.25"
regex = "1"
lazy_static = "1.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# WebView security
subtle = "2.6"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }

# UPnP port forwarding
igd = "0.12"

# Telegram client
# Using fork with MTProxy support from https://github.com/alksef/grammers-mtproxy
grammers-client = { git = "https://github.com/alksef/grammers-mtproxy", branch = "master", features = ["proxy"] }
grammers-session = { git = "https://github.com/alksef/grammers-mtproxy", branch = "master" }
grammers-mtsender = { git = "https://github.com/alksef/grammers-mtproxy", branch = "master", features = ["proxy", "mtproxy"] }
grammers-tl-types = { git = "https://github.com/alksef/grammers-mtproxy", branch = "master" }

# Time utilities
chrono = "0.4"

# Twitch IRC TLS
tokio-native-tls = "0.3"
native-tls = "0.2"

# Thread safety and rate limiting
parking_lot = "0.12"
governor = "0.6"

# Russian number to text conversion
russian_numbers = "0.2.0"

# Timing attack prevention
rand = "0.10"

# Offline spellcheck (Hunspell-compatible)
spellbook = "0.4"

# Piper TTS embedded runtime: static ONNX Runtime + phonemization
ort = "=2.0.0-rc.12"
espeak-rs = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_TextServices",
    "Win32_UI_Shell"
] }

[features]
default = ["mtproxy"]
mtproxy = ["grammers-mtsender/mtproxy"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

# Workaround: duplicate node names generated during tract-pulse
# codegen/compaction for the DFN3 graph. Our local copy auto-deduplicates names.
[patch.crates-io]
tract-core = { path = "patches/tract-core" }
